--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://bitbucket.org/miun_dt190g/jasv2000_lab_backend_dt190g#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonfile": "^6.1.0"
   }
 }
