mongoose and dotenv installed

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://bitbucket.org/miun_dt190g/jasv2000_lab_backend_dt190g#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonfile": "^6.1.0"
+    "jsonfile": "^6.1.0",
+    "mongoose": "^6.8.0"
   }
 }
